UPDATES: Fixing Mini Navbar z-index

--- a/src/styles/css/header.css
+++ b/src/styles/css/header.css
@@ -125,7 +125,7 @@
 	margin-top: -20vh;
 	height: 50px;
 	width: 100%;
-	z-index: 1000000000000000000;
+	z-index: 100000000;
 	/* background-color: green; */
 	background: rgba(255, 255, 255, .7);
 	-webkit-backdrop-filter: blur(10px);
@@ -173,7 +173,7 @@
 	display: flex;
 	justify-content: space-between;
 	flex-direction: row;
-	z-index: 1000000000000000000000;
+	z-index: 100000000;
 }
 
 .hello {
